--- a/index.html
+++ b/index.html
@@ -23,17 +23,18 @@
     <section id="menu">
         <div class="rect1">
             <div class="left-main">
-                <p>Rozwuj.</p>
+                <p>Programowanie.</p>
+                <p>Technologia.</p>
                 <p>Kodowanie.</p>
-                <p>Zwuj.</p>
             </div>
         </div>
         </div>
         <div class="rect2">
             <div class="centered">
                 <img src="lightLogo.png" alt="">
-                <p>Koło które zaczyna się kręcić.</p>
-                <p>|get started|</p>
+                <p>Koło </p>
+                <p>które zaczyna się kręcić.</p>
+                <img class="gear-img" src="gear.png" alt="gear">
             </div>
         </div>
     </section>
@@ -41,11 +42,13 @@
         <div class="rect3">
             <h1 class="about--title">O nas</h1>
             <p class="center--text">
-                Jesteśmy zainteresowani technologia, komputerami, wszystkim związanym z branża IT
+                Jesteśmy zainteresowani technologią, komputerami, wszystkim związanym z branża IT
                 i nie tylko. Posiadamy chęć do nauki, próbujemy zrobić rzeczy które nam przyjdą na myśl,
                 niezależnie od środowiska, języka programowania, silnika, programu w jakim mamy pracować
                 jeżeli wpadniemy na pomysł próbujemy znaleźć jak najwygodniejsze narzędzie do
-                zbudowania tego pomysłu.
+                jego zbudowania. Chcemy uczestniczyć w jak największej ilości konkursów, game jamów,
+                itp, żeby uzyskać znajomości, doświadczenie oraz zbudować CV godne do prezentowania
+                ale najważniejsze to przyjemność wynikająca z rozwoju i dobrej zabawy.
             </p>
             <img src="123.png" alt="">
         </div>
@@ -53,9 +56,8 @@
             <h1 class="about--title" style="color: var(--cl3);">Dlaczego powstaliśmy?</h1>
             <p class="center--text" style="color: var(--cl3);">
                 Na początku drugiego semestru uznaliśmy, że niewystarczające dla nas były zajęcia
-                zapewniane na kierunku , chcieliśmy działać, trenować, i zdobywać nowe umiejętności przez
-                co uznaliśmy że założenie koła naukowego pozwoli nam rozwijać się w szybszym i bardziej
-                elastycznym czasie.                   
+                zapewniane na kierunku, chcieliśmy działać, uczyć się, i zdobywać nowe umiejętności.
+                W skutek tego powstało owe koło, z myślą o nabyciu takich możliwości.
             </p>
         </div>
         <div class="rect5">
@@ -64,13 +66,14 @@
                 Zdobycie doświadczenia w dziedzinie informatyki;
                 Chęć zdobywania wiedzy;
                 Nauka pracy w zespole;
-                Chęć działania, bycia aktywnym w dziedzinie informatyki;
-                Stworzenie środowiska do jak najlepszej nauki dla przyszłego pokolenia.
+                Stworzenie środowiska do jak najwydajniejszej i przyjemniejszej nauki;
             </p>
         </div>
     </section>
     <section class="section__projects" id="projects">
-        SOON
+        <div class="projekty-h">
+            <h1>WKRÓTCE</h1>
+        </div>
     </section>
     <section class="section__contact" id="contact">
         <div class="rect6">
