--- a/projects.html
+++ b/projects.html
@@ -23,10 +23,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0" >
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="projects.html">Projects</a>
+              <a class="nav-link active" href="projects.html">Projects</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html">About us</a>
@@ -38,36 +38,52 @@
         </div>
       </div>
   </nav>
-  
   <main class="container">
-    <div class="container-fluid">
-      <div class="p-3 mb-4 bg-body-tertiary rounded-3 gradient-color">
-        <div class="container-fluid py-2">
-          <h1 class="display-6 fw-bold">Ideas. Fun. Technology. </h1>
-          <p class="col-md-8 fs-6">We're a vibrant community of IT/CS enthusiasts driven by the thrill of innovation and the pursuit of knowledge. At Errno, we believe in fostering a culture where ideas flow freely, unencumbered by the fear of the unknown.</p>
-          <button class="btn btn-md btn-about" type="button">More about us</button>
+    <div class="container marketing">
+      
+      <div class="row featurette py-4 bg-body-tertiary rounded-3 gradient-color mb-3">
+        <div class="col-md-7 ">
+          <h2 class="featurette-heading fw-normal lh-1 fw-bold">SNS MINERWA <span class="text-body-secondary"></span></h2>
+          <p class="lead">Minerwa is a virtual shooting sports training system designed for high schools and elementary schools. Easy and safe way to learn/teach how to shoot a gun.</p>
+          <button class="btn btn-md btn-about mb-1" type="button">Checkout more</button>
+        </div>
+        <div class="col-md-5">
+          <img class="featurette-image img-fluid mx-auto rounded-3" src="images/minerwa.jpg" alt="">
         </div>
       </div>
-      <div class="row align-items-md-stretch">
-        <div class="col-md-6 mb-3">
-          <div class="h-100 p-5 bg-body-tertiary rounded-3">
-            <h2 class="fw-bold fs-1">Join us</h2>
-            <p>Whether you're a seasoned coder or just dipping your toes into the vast ocean of technology, there's a place for you here. Join us on our journey as we push the boundaries of what's possible and redefine the future of tech, one idea at a time.</p>
-            <button class="btn btn-md btn-about" type="button">Get in touch</button>
-          </div>
+      <div class="row featurette py-4 bg-body-tertiary rounded-3 gradient-color mb-3">
+        <div class="col-md-7">
+          <h2 class="featurette-heading fw-normal lh-1 fw-bold">LAB VR <span class="text-body-secondary"></span></h2>
+          <p class="lead">It's an innovative classroom simulation where physics is an adventure, geology becomes an expedition, astronomy turns into a journey among the stars, and computer technology devices come to life in fascinating ways! </p>
         </div>
-        <div class="col-md-6 mb-3">
-          <div class="h-100 p-5 bg-body-tertiary rounded-3 gradient-color">
-            <h2 class="fw-bold fs-1">What we've done</h2>
-            <p>Our journey has seen us dive into the captivating realms of the cutting-edge world of VR game development, and harness the power of AI. But here's the exciting part – we're only scratching the surface. With each project, we unearth new possibilities and push the boundaries of what's achievable.</p>
-            <button class="btn btn-about" type="button">See our projects</button>
-          </div>
+        <div class="col-md-5">
+          <img class="featurette-image img-fluid mx-auto rounded-3" src="images/labvr.png" alt="">
         </div>
+      </div>
 
+  
+      <div class="row featurette py-4 bg-body-tertiary rounded-3 gradient-color mb-3">
+        <div class="col-md-7">
+          <h2 class="featurette-heading fw-normal lh-1 fw-bold">PESTKA JAM <span class="text-body-secondary"></span></h2>
+          <p class="lead">Pestka jam was an online game jam organized by us with collaboration with other student research groups. First edition went well but we now have more expecience and we want to make a second edition of this game jam. Follow us on facebook for more information.</p>
+        </div>
+        <div class="col-md-5">
+          <img class="featurette-image img-fluid mx-auto rounded-3" src="images/pestkajam.jpg" alt="">
+        </div>
       </div>
+      <div class="row featurette py-4 bg-body-tertiary rounded-3 gradient-color mb-3">
+        <div class="col-md-7">
+          <h2 class="featurette-heading fw-normal lh-1 fw-bold">PLANETARIUM AR<span class="text-body-secondary"></span></h2>
+          <p class="lead">Planetarium AR is an innovative application designed to bring the wonders of the cosmos directly to your fingertips through the power of augmented reality technology. Users can embark on a journey through the Solar System.</p>
+        </div>
+        <div class="col-md-5">
+          <img class="featurette-image img-fluid mx-auto rounded-3" src="images/pestkajam.jpg" alt="">
+        </div>
+      </div>
+  
     </div>
-
   </main>
+
 
   <footer class="d-flex flex-wrap justify-content-between align-items-center py-4 my-1 border-top">
     <div class="col-md-4 d-flex align-items-center">
