--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0" >
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="projects.html">Projects</a>
@@ -32,41 +32,52 @@
               <a class="nav-link" href="about.html">About us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
+              <a class="nav-link active" href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
       </div>
   </nav>
-  
-  <main class="container">
-    <div class="container-fluid">
-      <div class="p-3 mb-4 bg-body-tertiary rounded-3 gradient-color">
-        <div class="container-fluid py-2">
-          <h1 class="display-6 fw-bold">Ideas. Fun. Technology. </h1>
-          <p class="col-md-8 fs-6">We're a vibrant community of IT/CS enthusiasts driven by the thrill of innovation and the pursuit of knowledge. At Errno, we believe in fostering a culture where ideas flow freely, unencumbered by the fear of the unknown.</p>
-          <button class="btn btn-md btn-about" type="button">More about us</button>
-        </div>
-      </div>
-      <div class="row align-items-md-stretch">
-        <div class="col-md-6 mb-3">
-          <div class="h-100 p-5 bg-body-tertiary rounded-3">
-            <h2 class="fw-bold fs-1">Join us</h2>
-            <p>Whether you're a seasoned coder or just dipping your toes into the vast ocean of technology, there's a place for you here. Join us on our journey as we push the boundaries of what's possible and redefine the future of tech, one idea at a time.</p>
-            <button class="btn btn-md btn-about" type="button">Get in touch</button>
-          </div>
-        </div>
-        <div class="col-md-6 mb-3">
-          <div class="h-100 p-5 bg-body-tertiary rounded-3 gradient-color">
-            <h2 class="fw-bold fs-1">What we've done</h2>
-            <p>Our journey has seen us dive into the captivating realms of the cutting-edge world of VR game development, and harness the power of AI. But here's the exciting part – we're only scratching the surface. With each project, we unearth new possibilities and push the boundaries of what's achievable.</p>
-            <button class="btn btn-about" type="button">See our projects</button>
-          </div>
-        </div>
 
+  <main class="my-5 py-4">
+    <div id="featured-3" class="container px-4 py-5">
+      <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+        <div class="feature col">
+          <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
+            <svg class="bi" width="1em" height="1em"><use xlink:href="#collection"></use></svg>
+          </div>
+          <h3 class="fs-2 text-body-emphasis">Featured title</h3>
+          <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+          <a href="#" class="icon-link">
+            Call to action
+            <svg class="bi"><use xlink:href="#chevron-right"></use></svg>
+          </a>
+        </div>
+        <div class="feature col">
+          <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
+            <svg class="bi" width="1em" height="1em"><use xlink:href="#people-circle"></use></svg>
+          </div>
+          <h3 class="fs-2 text-body-emphasis">Featured title</h3>
+          <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+          <a href="#" class="icon-link">
+            Call to action
+            <svg class="bi"><use xlink:href="#chevron-right"></use></svg>
+          </a>
+        </div>
+        <div class="feature col">
+          <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
+            <svg class="bi" width="1em" height="1em"><use xlink:href="#toggles2"></use></svg>
+          </div>
+          <h3 class="fs-2 text-body-emphasis">Featured title</h3>
+          <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+          <a href="#" class="icon-link">
+            Call to action
+            <svg class="bi"><use xlink:href="#chevron-right"></use></svg>
+          </a>
       </div>
     </div>
-
+  
+    </div>
   </main>
 
   <footer class="d-flex flex-wrap justify-content-between align-items-center py-4 my-1 border-top">
