--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
       <div class="row">
         <div class="col-lg center bg-body-tertiary rounded-3 p-4 mb-2 mx-2" style="background-image: url(images/pengus.png); background-size: cover;">
           <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
-          <h2 class="fw-normal">Nikodem Panknin</h2>
+          <h2 class="fw-normal">Heading</h2>
           <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
           <p><a class="btn btn-secondary" href="#">View details »</a></p>
         </div><!-- /.col-lg-4 -->
