font and container fix
font to lead and container to container-fluid

--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=2.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -38,13 +38,13 @@
         </div>
       </div>
   </nav>
-  <main class="container">
-    <div class="container marketing">
+  <main class="container-fluid">
+    <div class="container-fluid marketing">
       
       <div class="row featurette py-4 bg-body-tertiary rounded-3 gradient-color mb-3">
         <div class="col-md-7 ">
           <h2 class="featurette-heading fw-normal lh-1 fw-bold">SNS MINERWA <span class="text-body-secondary"></span></h2>
-          <p class="lead">Minerwa is a virtual shooting sports training system designed for high schools and elementary schools. Easy and safe way to learn/teach how to shoot a gun.</p>
+          <p class="lead fs-3">Minerwa is a virtual shooting sports training system designed for high schools and elementary schools. Easy and safe way to learn/teach how to shoot a gun.</p>
           <button class="btn btn-md btn-about mb-1" type="button">Checkout more</button>
         </div>
         <div class="col-md-5">
@@ -54,7 +54,7 @@
       <div class="row featurette py-4 bg-body-tertiary rounded-3 gradient-color mb-3">
         <div class="col-md-7">
           <h2 class="featurette-heading fw-normal lh-1 fw-bold">LAB VR <span class="text-body-secondary"></span></h2>
-          <p class="lead">It's an innovative classroom simulation where physics is an adventure, geology becomes an expedition, astronomy turns into a journey among the stars, and computer technology devices come to life in fascinating ways! </p>
+          <p class="lead fs-3">It's an innovative classroom simulation where physics is an adventure, geology becomes an expedition, astronomy turns into a journey among the stars, and computer technology devices come to life in fascinating ways! </p>
         </div>
         <div class="col-md-5">
           <img class="featurette-image img-fluid mx-auto rounded-3" src="images/labvr.png" alt="">
@@ -65,7 +65,7 @@
       <div class="row featurette py-4 bg-body-tertiary rounded-3 gradient-color mb-3">
         <div class="col-md-7">
           <h2 class="featurette-heading fw-normal lh-1 fw-bold">PESTKA JAM <span class="text-body-secondary"></span></h2>
-          <p class="lead">Pestka jam was an online game jam organized by us with collaboration with other student research groups. First edition went well but we now have more expecience and we want to make a second edition of this game jam. Follow us on facebook for more information.</p>
+          <p class="lead fs-3">Pestka jam was an online game jam organized by us with collaboration with other student research groups. First edition went well but we now have more expecience and we want to make a second edition of this game jam. Follow us on facebook for more information.</p>
         </div>
         <div class="col-md-5">
           <img class="featurette-image img-fluid mx-auto rounded-3" src="images/pestkajam.jpg" alt="">
@@ -74,7 +74,7 @@
       <div class="row featurette py-4 bg-body-tertiary rounded-3 gradient-color mb-3">
         <div class="col-md-7">
           <h2 class="featurette-heading fw-normal lh-1 fw-bold">PLANETARIUM AR<span class="text-body-secondary"></span></h2>
-          <p class="lead">Planetarium AR is an innovative application designed to bring the wonders of the cosmos directly to your fingertips through the power of augmented reality technology. Users can embark on a journey through the Solar System.</p>
+          <p class="lead fs-3">Planetarium AR is an innovative application designed to bring the wonders of the cosmos directly to your fingertips through the power of augmented reality technology. Users can embark on a journey through the Solar System.</p>
         </div>
         <div class="col-md-5">
           <img class="featurette-image img-fluid mx-auto rounded-3" src="images/pestkajam.jpg" alt="">
