--- a/contact.html
+++ b/contact.html
@@ -39,8 +39,8 @@
       </div>
   </nav>
 
-  <main class="my-5 py-4">
-    <div id="featured-3" class="container px-4 py-5">
+  <main class="container-fluid my-5 py-4">
+    <div id="featured-3" class="container-fluid px-4 py-5">
       <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
         <div class="feature col">
           <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
