--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=2.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -39,12 +39,12 @@
       </div>
   </nav>
   
-  <main class="container">
+  <main class="container-fluid">
     <div class="container-fluid">
       <div class="p-3 mb-4 bg-body-tertiary rounded-3 gradient-color">
         <div class="container-fluid py-2">
           <h1 class="display-6 fw-bold">Ideas. Fun. Technology. </h1>
-          <p class="col-md-8 fs-6">We're a vibrant community of IT/CS enthusiasts driven by the thrill of innovation and the pursuit of knowledge. At Errno, we believe in fostering a culture where ideas flow freely, unencumbered by the fear of the unknown.</p>
+          <p class="col-md-8 fs-5 lead">We're a vibrant community of IT/CS enthusiasts driven by the thrill of innovation and the pursuit of knowledge. At Errno, we believe in fostering a culture where ideas flow freely, unencumbered by the fear of the unknown.</p>
           <button class="btn btn-md btn-about" type="button">More about us</button>
         </div>
       </div>
@@ -52,14 +52,14 @@
         <div class="col-md-6 mb-3">
           <div class="h-100 p-5 bg-body-tertiary rounded-3">
             <h2 class="fw-bold fs-1">Join us</h2>
-            <p>Whether you're a seasoned coder or just dipping your toes into the vast ocean of technology, there's a place for you here. Join us on our journey as we push the boundaries of what's possible and redefine the future of tech, one idea at a time.</p>
+            <p class="fs-5 lead">Whether you're a seasoned coder or just dipping your toes into the vast ocean of technology, there's a place for you here. Join us on our journey as we push the boundaries of what's possible and redefine the future of tech, one idea at a time.</p>
             <button class="btn btn-md btn-about" type="button">Get in touch</button>
           </div>
         </div>
         <div class="col-md-6 mb-3">
           <div class="h-100 p-5 bg-body-tertiary rounded-3 gradient-color">
             <h2 class="fw-bold fs-1">What we've done</h2>
-            <p>Our journey has seen us dive into the captivating realms of the cutting-edge world of VR game development, and harness the power of AI. But here's the exciting part – we're only scratching the surface. With each project, we unearth new possibilities and push the boundaries of what's achievable.</p>
+            <p class="fs-5 lead">Our journey has seen us dive into the captivating realms of the cutting-edge world of VR game development, and harness the power of AI. But here's the exciting part – we're only scratching the surface. With each project, we unearth new possibilities and push the boundaries of what's achievable.</p>
             <button class="btn btn-about" type="button">See our projects</button>
           </div>
         </div>
