Even better fonts

--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,7 @@
       
       <div class="row featurette py-4 bg-body-tertiary rounded-3 gradient-color mb-3">
         <div class="col-md-7 ">
-          <h2 class="featurette-heading fw-normal lh-1 fw-bold">SNS MINERWA <span class="text-body-secondary"></span></h2>
+          <h2 class="display-6 fw-bold">SNS MINERWA <span class="text-body-secondary"></span></h2>
           <p class="lead fs-3">Minerwa is a virtual shooting sports training system designed for high schools and elementary schools. Easy and safe way to learn/teach how to shoot a gun.</p>
           <button class="btn btn-md btn-about mb-1" type="button">Checkout more</button>
         </div>
@@ -53,7 +53,7 @@
       </div>
       <div class="row featurette py-4 bg-body-tertiary rounded-3 gradient-color mb-3">
         <div class="col-md-7">
-          <h2 class="featurette-heading fw-normal lh-1 fw-bold">LAB VR <span class="text-body-secondary"></span></h2>
+          <h2 class="display-6 fw-bold ">LAB VR <span class="text-body-secondary"></span></h2>
           <p class="lead fs-3">It's an innovative classroom simulation where physics is an adventure, geology becomes an expedition, astronomy turns into a journey among the stars, and computer technology devices come to life in fascinating ways! </p>
         </div>
         <div class="col-md-5">
@@ -64,7 +64,7 @@
   
       <div class="row featurette py-4 bg-body-tertiary rounded-3 gradient-color mb-3">
         <div class="col-md-7">
-          <h2 class="featurette-heading fw-normal lh-1 fw-bold">PESTKA JAM <span class="text-body-secondary"></span></h2>
+          <h2 class="display-6 fw-bold">PESTKA JAM <span class="text-body-secondary"></span></h2>
           <p class="lead fs-3">Pestka jam was an online game jam organized by us with collaboration with other student research groups. First edition went well but we now have more expecience and we want to make a second edition of this game jam. Follow us on facebook for more information.</p>
         </div>
         <div class="col-md-5">
@@ -73,7 +73,7 @@
       </div>
       <div class="row featurette py-4 bg-body-tertiary rounded-3 gradient-color mb-3">
         <div class="col-md-7">
-          <h2 class="featurette-heading fw-normal lh-1 fw-bold">PLANETARIUM AR<span class="text-body-secondary"></span></h2>
+          <h2 class="display-6 fw-bold">PLANETARIUM AR<span class="text-body-secondary"></span></h2>
           <p class="lead fs-3">Planetarium AR is an innovative application designed to bring the wonders of the cosmos directly to your fingertips through the power of augmented reality technology. Users can embark on a journey through the Solar System.</p>
         </div>
         <div class="col-md-5">
